include/darknet.h

typedef struct{
    int classes;
    char **names;
} metadata;
metadata get_metadata(char *file);
typedef enum {
    CONVOLUTIONAL,
    DECONVOLUTIONAL,
    CONNECTED,
    MAXPOOL,
    SOFTMAX,
    DETECTION,
    DROPOUT,
    CROP,
    ROUTE,
    COST,
    NORMALIZATION,
    AVGPOOL,
    LOCAL,
    SHORTCUT,
    ACTIVE,
    RNN,
    GRU,
    LSTM,
    CRNN,
    BATCHNORM,
    NETWORK,
    XNOR,
    REGION,
    REORG,
    BLANK
} LAYER_TYPE;
struct network;
typedef struct network network;
typedef struct network{
    int n;
    int batch;
    size_t *seen;
    int *t;
    float epoch;
    int subdivisions;
    layer *layers;
    float *output;
    learning_rate_policy policy;

    float learning_rate;
    float momentum;
    float decay;
    float gamma;
    float scale;
    float power;
    int time_steps;
    int step;
    int max_batches;
    float *scales;
    int   *steps;
    int num_steps;
    int burn_in;

    int adam;
    float B1;
    float B2;
    float eps;

    int inputs;
    int outputs;
    int truths;
    int notruth;
    int h, w, c;
    int max_crop;
    int min_crop;
    float max_ratio;
    float min_ratio;
    int center;
    float angle;
    float aspect;
    float exposure;
    float saturation;
    float hue;
    int random;

    int gpu_index;
    tree *hierarchy;

    float *input;
    float *truth;
    float *delta;
    float *workspace;
    int train;
    int index;
    float *cost;

#ifdef GPU
    float *input_gpu;
    float *truth_gpu;
    float *delta_gpu;
    float *output_gpu;
#endif

} network;
typedef struct {
    int w;
    int h;
    int c;
    float *data;
} image;
typedef struct{
    float x, y, w, h;
} box;
typedef struct matrix{
    int rows, cols;
    float **vals;
} matrix;
typedef struct{
    int w, h;
    matrix X;
    matrix y;
    int shallow;
    int *num_boxes;
    box **boxes;
} data;
network *load_network(const char *cfg, const char *weights, int clear);
void cuda_set_device(int n);
void rgbgr_image(image im);
void free_network(network *net);
image load_image(const char *filename, int w, int h, int c);
image load_image_color(const char *filename, int w, int h);
image make_image(int w, int h, int c);
image letterbox_image(image im, int w, int h);
void save_image(image p, const char *name);
void show_image(image p, const char *name);
void draw_detections(image im, int num, float thresh, box *boxes, float **probs, float **masks, char **names, image **alphabet, int classes);
image **load_alphabet();
void free_alphabet(image **alphabet);
float *network_predict(network *net, float *input);
int network_width(network *net);
int network_height(network *net);
float *network_predict_image(network *net, image im);
void network_detect(network *net, image im, float thresh, float hier_thresh, float nms, box *boxes, float **probs);
int num_boxes(network *net);
box *make_boxes(network *net);
void free_boxes(box *boxes);
void free_image(image m);
void free_ptrs(void **ptrs, int n);
/** Demo **/
struct detector_demo;
typedef struct detector_demo detector_demo;
detector_demo * make_detector_demo(const char *datacfg,
                                   const char *cfgfile,
                                   const char *weightfile,
                                   const float thresh,
                                   const float hier_thresh);
void detector_demo_process_file(detector_demo *det,
                                const char *filename,
                                const char *outfile);
void detector_demo_process_image(detector_demo *det,
                                 image in);
void free_detector_demo(detector_demo * det);