src/layer.h

int get_layer_h(layer *l);
int get_layer_w(layer *l);
int get_layer_n(layer *l);