src/image.h

void data_into_image(const unsigned char* imagedata,
                     int width,
                     int height,
                     int bytes_per_pixel,
                     int bytes_per_line,
                     image im);
image data_to_image(const unsigned char* imagedata,
                    int width,
                    int height,
                    int bytes_per_pixel,
                    int bytes_per_line);
void copy_image_into_data(const image im,
                          unsigned char* imagedata,
                          int width,
                          int height,
                          int bytes_per_pixel,
                          int bytes_per_line);